--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -2,6 +2,9 @@
 
 <%= f.input :title, :label => "职位名称" %>
 <%= f.input :description, :label => "职位描述" %>
-
-  <%= f.submit "提交" %>
+<%= f.input :wage_lower_bound, :label => "薪资下限"%>
+<%= f.input :wage_upper_bound, :label => "薪资上限"%>
+<%= f.input :contact_email, :label => "联系邮箱"%>
+<%= f.input :is_hidden, :label => "隐藏职位"%>
+<%= f.submit "提交" %>
 <% end %>
