add publish and hide button

--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -14,6 +14,11 @@
     <td>
       <%= link_to("编辑", edit_admin_job_path(job)) %>
       <%= link_to("删除", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
+      <% if job.is_hidden %>
+       <%= link_to("公布", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-default") %>
+      <% else %>
+       <%= link_to("隐藏", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-default") %>
+      <% end %>
     </td>
     <td>
       <%= job.created_at %>
