add model job_relationships

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -47,6 +47,15 @@
             <td>
                 <%= job.user.email %>
             </td>
+            <td>
+              <% if current_user && current_user.has_applied?(job) %>
+                <%= link_to("已投递", new_job_resume_path(job), class: "btn btn-danger btn-sm
+                             disabled", method: :get) %>
+            <% else %>
+                <%= link_to("投递简历", new_job_resume_path(job), class: "btn btn-info btn-sm",
+                             method: :get) %>
+             <% end %>
+            </td>
         </tr>
         <% end %>
     </tbody>
