--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -22,6 +22,7 @@
                      <% if current_user.admin? %>
                      <li> <%= link_to("管理员入口", admin_jobs_path)%></li>
                      <% end %>
+                     <li> <%= link_to("我投递的工作", account_jobs_path)%></li>
                      <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
                   </ul>
                   </li>
