add more admins

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -5,5 +5,11 @@
 
 </p>
 <div class="text-center">
-  <%= link_to("投交履历", new_job_resume_path(@job), :style => "font-size: 30px; text-decoration:underline;") %>
+  <% if current_user && current_user.has_applied?(@job) %>
+    <%= link_to("您已投递，不可重复投递", new_job_resume_path(@job), class: "btn btn-danger btn-sm
+                 disabled", method: :get) %>
+<% else %>
+    <%= link_to("投递简历", new_job_resume_path(@job), class: "btn btn-info btn-sm",
+                 method: :get) %>
+ <% end %>
 </div>
