--- a/app/views/account/jobs/index.html.erb
+++ b/app/views/account/jobs/index.html.erb
@@ -6,8 +6,8 @@
     <thead>
       <tr>
         <th> # </th>
-        <th> Title </th>
-        <th> Description </th>
+        <th> 职位名称 </th>
+        <th> 职位描述 </th>
 
       </tr>
     </thead>
