--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2016 Rails101
-        <br>Design by yourname
+    <p class="text-center">Copyright ©2017 job-listing-game
+        <br>Design by jonathan
 
     </p>
 </footer>
