--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -4,7 +4,7 @@
 
 <br><br>
 
-<table class="table table-boldered">
+<table class="table table-boldered table-striped custab" >
     <thead>
         <tr>
             <td>
@@ -41,17 +41,14 @@
         <td> <%= job.wage_lower_bound %> </td>
         <td> <%= job.wage_upper_bound %> </td>
         <td>
-            <%= link_to("Edit", edit_admin_job_path(job)) %>
-            |
-            <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
+           <%= link_to("编辑", edit_admin_job_path(job), :class => "btn btn-xs btn-info") %>
+           <%= link_to("删除", admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "Are you sure?" }) %>
 
-            |
-            <% if job.is_hidden %>
-
-            <%= link_to("Publish", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-default") %>
-        <% else %>
-            <%= link_to("Hide", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-default") %>
-            <% end %>
+           <% if job.is_hidden %>
+             <%= link_to("公布", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-success") %>
+           <% else %>
+             <%= link_to("隐藏", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-warning") %>
+           <% end %>
         </td>
         <td>
             <%= job.created_at %>
