set devise's language Chinese

--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="pull-right">
-  <%= link_to("新增职位", new_admin_job_path, :class => "btn btn-default" ) %>
+  <%= link_to("新增职位", new_admin_job_path, :class => "btn btn-xs btn-success" ) %>
 </div>
 
 <br><br>
