--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -6,5 +6,5 @@
 <%= f.input :wage_upper_bound, :label => "薪资上限"%>
 <%= f.input :contact_email, :label => "联系邮箱"%>
 <%= f.input :is_hidden, :label => "隐藏职位"%>
-<%= f.submit "提交" %>
+<%= f.submit "提交", :class => "btn btn-xs btn-info"%>
 <% end %>
