add some details

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 @import "font-awesome";
 
 .jumbotron {
-  background-image:url('http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-542213.png');
+  background-image:url('http://ww2.sinaimg.cn/large/006tKfTcgy1feqylowh6gj31hc125nhr.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 110px;
@@ -97,10 +97,11 @@
   transition: 0.5s;
 }
 
+/* nanbar*/
 .navbar-default {
-    background-color: #212121; //背景颜色
+    background-color: #424242; //背景颜色
 
-    border-color: #212121; //边框颜色
+    border-color: #424242; //边框颜色
 
     margin-bottom: 0; //底部 margin 不撑开距离
 }
@@ -111,8 +112,9 @@
    }
 }
 
+/* navbar */
 .navbar-default .navbar-brand {
-   color: #EF6C00; //字体颜色
+   color: #FAFAFA; //字体颜色
 
    padding: 10px 15px; //上下10px，左右15px
    line-height: 30px; //文字行高
@@ -139,18 +141,18 @@
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
- color: #FF6F00;
+ color: #424242;
 
- background-color: #FFE0B2;
+ background-color: #424242;
 
 }
 
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
- background-color: #FFE0B2;
+ background-color: #424242;
 
- color: #212121;
+ color: #FF6F00;
 
 }
 
@@ -170,7 +172,7 @@
 .btn-danger {
    color: #fff;//字体颜色
 
-   background-color: #EF6C00;//背景颜色
+   background-color: #E9977A;//背景颜色
 
    border-color: #EF6C00;//边框颜色
 
