--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,10 +1,8 @@
 <div class="jumbotron">
-    <h1 class="title">18K Offer</h1>
-    <p class="slogan">18K Offer 是一个提供18K薪水工作机会的求职网站。
+    <h1 class="title"> 才子web </h1>
+    <p class="slogan">才子web， 只等有才的你来。
     <br>
-    我们希望藉由这个网站，能让大家找到且应征上高薪且优质的工作。
-    <br>
-     凭借自己的努力和天份也会变 Winner
+    希望通过这个网站，找到你的伯乐，同时让伯乐发现才华横溢的你！  
     </p>
     <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
 </div>
