--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-             <a class="navbar-brand" href="/"><img src='<%= image_url 'logo.png' %>' >真·24K Offer</a>
+             <a class="navbar-brand" href="/"><img src='<%= image_url 'logo.png' %>' > 才子web </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -16,7 +16,7 @@
                   <% else %>
                     <li class="dropdown">
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                           Hi!, <%= current_user.email %>
+                          欢迎你！, <%= current_user.email %>
                        <b class="caret"></b>
                        </a>
                    <ul class="dropdown-menu">
@@ -70,6 +70,7 @@
             <%= f.button :submit, "立即注册" %>
         </div>
       <% end %>
+
     </div>
   </div>
 </div>
