--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,13 @@
-<footer class="container" style="margin-top: 100px;">
+<footer class="container-fluid" >
+    <div class="footer">
+      <hr>
+         <a href="http://twitter.com" class="fa fa-twitter" target="_blank"></a>
+         <a href="https://github.com/megychen" class="fa fa-github" target="_blank"></a>
+         <a href="http://cz.linkedin.com" class="fa fa-linkedin" target="_blank"></a>
+         <a href="mailto:example@mail.com" class="fa fa-envelope"></a>
+
     <p class="text-center">Copyright ©2017 job-listing-game
         <br>Design by jonathan
-
     </p>
+  </div>
 </footer>
