better welcome#index

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,8 +11,10 @@
     <body>
 
         <div class="container-fluid">
+          <div class="row">
             <%= render "common/navbar" %>
             <%= render "common/flashes" %>
+          </div>
             <div class="row">
               <div class="col-md-2">
                 <ul class="nav nav-pills nav-stacked" style="max-width: 80px; padding-top:20px;">
@@ -25,8 +27,9 @@
               </div>
            </div>
         </div>
-
-        <%= render "common/footer" %>
+        <div class="row">
+         <%= render "common/footer" %>
+       </div>
 
     </body>
 </html>
