--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
          <%= yield %>
       </div>
 
+         <div class="row">
           <%= render "common/footer" %>
+        </div>
+
   </body>
 </html>
