--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,67 +20,74 @@
 @import "font-awesome";
 
 .jumbotron {
-  background-image:url('http://ww2.sinaimg.cn/large/006tKfTcgy1feqylowh6gj31hc125nhr.jpg');
+  background-image:url('http://ww2.sinaimg.cn/large/006tKfTcly1ferspovlfnj31kw11y1l0.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 110px;
 }
 
 .title {
-  background-color: rgba(250, 250, 250, 0.39);//背景颜色含透明度
-  max-width: 500px;//最大宽度
-  margin-top: 200px;//和顶部拉开距离
-  margin-bottom: 0;//这样就可以紧接息面的描述文字
-  border-top-right-radius: 3px;//右上角圆边
-  border-top-left-radius: 3px;//左上角圆边
+    background-color: rgba(250, 250, 250, 0.39);//背景颜色含透明度
+    max-width: 500px;//最大宽度
+    margin-top: 200px;//和顶部拉开距离
+    margin-bottom: 0;//这样就可以紧接息面的描述文字
+    border-top-right-radius: 3px;//右上角圆边
+    border-top-left-radius: 3px;//左上角圆边
+
   }
 
-  .jumbotron h1, .jumbotron .h1 {
-     text-align: left;//文字左对齐
-     color: #222;  //字体颜色
+   .jumbotron h1, .jumbotron .h1 {
+       text-align: left;//文字左对齐
+       color: #222;  //字体颜色
 
-     padding: 50px 20px 0;//上50px，左右20px，下0
+       padding: 50px 20px 0;//上50px，左右20px，下0
+   }
+
+   .jumbotron p {
+       margin: 0;//上下左右margin为0
+       font-size: 26px;//字体大小
+       max-width: 500px;//最大宽度
+       background-color: rgba(250, 250, 250, 0.39);//背景颜色含透明度
+       padding: 20px;//上下左右padding为20px
+       text-align: left;//文字左对齐
+       color: #222;//字体颜色
+
+       border-bottom-right-radius: 3px;//右下角圆边
+       border-bottom-left-radius: 3px;//左下角圆边
+   }
+
+.lead {
+  margin-bottom: 120px;
+  color: white;
+}
+
+/* btn */
+ .btn-danger {
+     color: #bdc3c7;//字体颜色
+
+     background-color: #fff;//背景颜色
+
+     border-color: #bdc3c7;//边框颜色
+
+
+ }
+
+ .btn-danger:hover {
+     background-color: #bdc3c7;//鼠标放置在btn上的背景颜色
+
+     border-color: #bdc3c7;//鼠标放置在btn上的边框颜色
+
+ }
+
+  .btn-lg, .btn-group-lg > .btn {
+      padding: 8px 16px;//通过padding来决定btn的大小
+      font-size: 20px;//btn文字大小
+      letter-spacing: 3px;//调整文字间距
+      border-radius: 30px;//btn圆角
+      width: 200px;//这里用指定宽度把btn拉得更长
+      text-align: center;
   }
 
-  .jumbotron p {
-     margin: 0;//上下左右margin为0
-     font-size: 26px;//字体大小
-     max-width: 500px;//最大宽度
-     background-color: rgba(250, 250, 250, 0.39);//背景颜色含透明度
-     padding: 20px;//上下左右padding为20px
-     text-align:left;//文字左对齐
-     color: #222;//字体颜色
-
-     border-bottom-right-radius: 3px;//右下角圆边
-     border-bottom-left-radius: 3px;//左下角圆边
-  }
-
-.caption {
-  margin: 30px;
-  text-align: center;
-  top: 20px;
-}
-
-.thumbnail {
-    border: 0 none;
-    box-shadow: none;
-    margin-top: 60px;
-}
-
-.custab{
-  border: 1px solid #ccc;
-
-  padding: 5px;
-  margin: 5% 0;
-  box-shadow: 3px 3px 2px #ccc;
-
-  transition: 0.5s;
-}
-
-.custab:hover{
-  box-shadow: 3px 3px 0px transparent;
-  transition: 0.5s;
-}
 
 /* nanbar*/
 .navbar-default {
@@ -141,9 +148,9 @@
 
 }
 
-.navbar-brand > img {
+ .navbar-brand > img {
    display: inline-block; //图片和链接文字显示在同一行
-   margin-right: 15px; //图片和链接文字拉开一点距离
+   margin-right: 1px; //图片和链接文字拉开一点距离
    width: 40px; //定制图片宽度
    height: 40px; //定制图片高度
 }
@@ -275,7 +282,10 @@
   font-size: 12px;
 }
 
+
+
 /* footer */
+
 footer {
     font-family: Verdana, Geneva, sans-serif;
     background-color: #EEEEEE;
@@ -285,7 +295,12 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
-    padding-bottom: 30px;
-    z-index: 1000
 
+    padding-bottom: 30px;
+    z-index: 1000;  /* 确保页面滑动的时候，字体不会从上面滑下去 */
+}
+
+
+.container {
+  text-align: center;
 }
