--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,34 +1,35 @@
-<div class="jumbotron">  
-    <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
-</div>
+  <div class="jumbotron">
+    <h1 class="title">才子web</h1>
+    <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">加入我们</a></p>
+  </div>
 
-<section id="company">
-  <div class = "container-fluid">
-    <div class="row">
-      <div class="col-sm-4 ">
-        <div class="thumbnail">
-          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-43-31.png" alt="search" class = "img-thumbnail">
-          <div class="caption">
-            <h3>北京朝阳建外SOHO</h3>
-          </div>
+
+  <section id="services" class="sec-services">
+    <div class="container">
+      <h1>我们的优势</h1>
+
+      <hr />
+
+      <div class="row">
+        <div class="col-sm-4">
+          <i class="fa fa-4x fa fa-envelope"></i>
+
+          <h2 class="h3">完整的业主信息</h2>
+
         </div>
-      </div>
-      <div class="col-sm-4 ">
-        <div class="thumbnail">
-          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-43-48.png" alt="bid" class = "img-thumbnail">
-          <div class="caption">
-            <h3>info@18koffer.com</h3>
-          </div>
+
+        <div class="col-sm-4">
+          <i class="fa fa-4x fa-database"></i>
+
+          <h2 class="h3">雄厚的企业实力</h2>
         </div>
-      </div>
-      <div class="col-sm-4 ">
-        <div class="thumbnail">
-          <img src="http://fullstack-public.oss-cn-qingdao.aliyuncs.com/2017-04-15-Screenshot%20at%20Apr%2015%2021-44-00.png" alt="heart" class = "img-thumbnail">
-          <div class="caption">
-            <h3>010-12344321</h3>
-          </div>
+
+        <div class="col-sm-4">
+          <i class="fa fa-4x fa-fax"></i>
+
+          <h2 class="h3">快捷的双方通讯</h2>
+
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
