set some details

--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,10 +1,10 @@
   <div class="jumbotron">
-    <h1 class="title">才子web</h1>
+    <h1 class="title">等你来联盟</h1>
     <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">加入我们</a></p>
   </div>
 
 
-  <section id="services" class="sec-services">
+  <section class="sec-services">
     <div class="container">
       <h1>我们的优势</h1>
 
