--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -285,6 +285,11 @@
 
 
 /* footer */
+body {
+  position: relative;
+  margin-bottom: -100px; /* 一定要和footer的高度一致 */
+  min-height: 100%;
+}
 
 footer {
     font-family: Verdana, Geneva, sans-serif;
@@ -295,7 +300,6 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
-
     padding-bottom: 30px;
     z-index: 1000;  /* 确保页面滑动的时候，字体不会从上面滑下去 */
 }
@@ -303,4 +307,11 @@ footer {
 
 .container {
   text-align: center;
+}
+
+.sec-services {
+  background-color: #DCDCDC;
+  margin-top: -20px;
+  margin-left: -20px;
+  margin-right: -15px;
 }
