better welcome views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,81 +19,115 @@
 @import "bootstrap";
 @import "font-awesome";
 
-.jumbotron {
-  background-image:url('http://ww2.sinaimg.cn/large/006tKfTcly1ferspovlfnj31kw11y1l0.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 110px;
+/* intro */
+section{
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
-.title {
-    background-color: rgba(250, 250, 250, 0.39);//背景颜色含透明度
-    max-width: 500px;//最大宽度
-    margin-top: 200px;//和顶部拉开距离
-    margin-bottom: 0;//这样就可以紧接息面的描述文字
-    border-top-right-radius: 3px;//右上角圆边
-    border-top-left-radius: 3px;//左上角圆边
 
-  }
-
-   .jumbotron h1, .jumbotron .h1 {
-       text-align: left;//文字左对齐
-       color: #222;  //字体颜色
-
-       padding: 50px 20px 0;//上50px，左右20px，下0
-   }
-
-   .jumbotron p {
-       margin: 0;//上下左右margin为0
-       font-size: 26px;//字体大小
-       max-width: 500px;//最大宽度
-       background-color: rgba(250, 250, 250, 0.39);//背景颜色含透明度
-       padding: 20px;//上下左右padding为20px
-       text-align: left;//文字左对齐
-       color: #222;//字体颜色
-
-       border-bottom-right-radius: 3px;//右下角圆边
-       border-bottom-left-radius: 3px;//左下角圆边
-   }
-
-.lead {
-  margin-bottom: 120px;
-  color: white;
+.btn.btn-primary-welcome{
+    background-color:  #3498db;
+    color: #fff;
+    border-color: #fff;
+    padding: 10px 20px;
+    margin: 30px;
+    font-size: 20px;
+    letter-spacing: 1px;
 }
 
-/* btn */
- .btn-danger {
-     color: #bdc3c7;//字体颜色
+.intro{
+    height: 650px;
+  background: image_url("intro.jpg") no-repeat scroll top center/ cover;
+    margin-left: -15px;
+    margin-right: -15px;
 
-     background-color: #fff;//背景颜色
+}
 
-     border-color: #bdc3c7;//边框颜色
-
-
- }
-
- .btn-danger:hover {
-     background-color: #bdc3c7;//鼠标放置在btn上的背景颜色
-
-     border-color: #bdc3c7;//鼠标放置在btn上的边框颜色
-
- }
-
-  .btn-lg, .btn-group-lg > .btn {
-      padding: 8px 16px;//通过padding来决定btn的大小
-      font-size: 20px;//btn文字大小
-      letter-spacing: 3px;//调整文字间距
-      border-radius: 30px;//btn圆角
-      width: 200px;//这里用指定宽度把btn拉得更长
-      text-align: center;
-  }
+.intro-content > h1 {
+    color: #FAFAFA;
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    margin-top: 10px;
+    margin-bottom: 60px;
+    text-transform: capitalize;
+    word-spacing: 6px;
+}
 
 
-/* nanbar*/
+/* intro end */
+
+/* our experts*/
+.our-experts{
+    background-color: #F2F2F2;
+    margin-left: -15px;
+    margin-right: -15px;
+
+    p{
+      letter-spacing: 1px;
+    }
+    a{
+      text-decoration:none;
+      color: #002E2E;
+    }
+
+    img{
+      width: 55px;
+    }
+}
+/* our experts */
+
+
+.short-line {
+    display: block;
+    background: #35CCC6;
+    border-style: none;
+    border-radius: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -10px;
+    margin-bottom: 30px;
+    z-index: 53;
+    width: 100px;
+    height: 1.5px;
+    position: relative;
+}
+
+/* what we do */
+.what-we-do{
+    text-align: center;
+
+    img{
+      margin-top: 35px;
+      margin-bottom: -35px;
+      width: 100px;
+    }
+}
+
+.what-we-do .do-box{
+    border: 1px solid transparent;
+}
+
+.do-box h3{
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    letter-spacing: 1px;
+}
+
+.do-box p {
+    color: #666;
+    letter-spacing: 1px;
+    line-height: 22px;
+    margin: 40px 25px 40px 25px;
+}
+
+/* nanbar */
 .navbar-default {
-    background-color: #424242; //背景颜色
+    background-color:  #2980b9; //背景颜色
 
-    border-color: #424242; //边框颜色
+    border-color: #2980b9; //边框颜色
 
     margin-bottom: 0; //底部 margin 不撑开距离
 }
@@ -104,47 +138,50 @@
    }
 }
 
-/* navbar */
+
 .navbar-default .navbar-brand {
    color: #FAFAFA; //字体颜色
 
    padding: 10px 15px; //上下10px，左右15px
    line-height: 30px; //文字行高
+   font-size: 150%;
  }
 
  .navbar-default .navbar-brand:hover,
  .navbar-default .navbar-brand:focus {
-   color: #FF6F00; //鼠标放置在链接上的文字颜色
+   color: #FAFAFA; //鼠标放置在链接上的文字颜色
 
    background-color: transparent; //鼠标放置在链接上的背景颜色，这里设为透明
 }
 
 .navbar-default .navbar-nav > li > a{
- color: #EF6C00;
+ color: #FAFAFA;
+ font-size: 110%;
+ font-weight: 150%;
 
 }
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
- color: #FF6F00;
+ color: #D3D3D3;
 
  background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
- color: #424242;
+ color: #FAFAFA;
 
- background-color: #424242;
+ background-color: transparent;
 
 }
 
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
- background-color: #424242;
+ background-color: transparent;
 
- color: #FF6F00;
+ color: #D3D3D3;
 
 }
 
@@ -155,8 +192,10 @@
    height: 40px; //定制图片高度
 }
 
+/*- navbar end-*/
+
 .container-fluid .jumbotron{
-   padding-bottom: 110px;//内部的底部边距，这样按钮不会很靠近底部了
+   padding-bottom: 120px;//内部的底部边距，这样按钮不会很靠近底部了
    margin: 0 -15px 20px;//顶部margin为0，因此可以直接接着导航栏；左右margin为负15，因此可以顶到浏览器的边缘（抵消 container-fluid 的 15px 左右padding);底部margin为20，会跟下面的内容撑开距离
    border-radius: 0;//圆角为0
 }
@@ -286,18 +325,33 @@
 
 /* footer */
 
+html,body {
+  margin: 0;
+  padding:0;
+  height: 100%;
+  clear:both;
+}
+.container-full {
+  min-height:100%;
+  height: auto;
+  height: 100%; /*IE6不识别min-height*/
+  position: relative;
+
+}
+
 footer {
     font-family: Verdana, Geneva, sans-serif;
     background-color: #EEEEEE;
     text-align: center;
     color: #7e7e7e;
-    margin-top: 0px;
+    margin-top: 10px;
     margin-left: -15px;
     margin-right: 0px;
     position: relative;
     bottom: 0;
     width: 100%;
-    padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     z-index: 1000;  /* 确保页面滑动的时候，字体不会从上面滑下去 */
 }
 
