--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,35 +1,75 @@
-  <div class="jumbotron">
-    <h1 class="title">等你来联盟</h1>
-    <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">加入我们</a></p>
-  </div>
+  <section class="intro">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <div class="intro-content">
+          <h1 >联盟招聘网，期待优秀的你来加入</h1>
 
-
-  <section class="sec-services">
-    <div class="container">
-      <h1>我们的优势</h1>
-
-
-
-      <div class="row">
-        <div class="col-sm-4">
-          <i class="fa fa-4x fa fa-envelope"></i>
-
-          <h2 class="h3">完整的业主信息</h2>
-
-        </div>
-
-        <div class="col-sm-4">
-          <i class="fa fa-4x fa-database"></i>
-
-          <h2 class="h3">雄厚的企业实力</h2>
-        </div>
-
-        <div class="col-sm-4">
-          <i class="fa fa-4x fa-fax"></i>
-
-          <h2 class="h3">快捷的双方通讯</h2>
-
+          <a class="btn btn-primary-welcome" href="/jobs" role="button">加入我们</a>
         </div>
       </div>
     </div>
+</section>
+
+
+<!--======== Feature =========-->
+<section id="feature" class="our-experts">
+    <div class="container">
+        <div class="row">
+          <div class="row">
+              <div class="col-md-6 col-md-offset-3 text-center">
+                  <h2 class="section-title">最好的时代，遇见最好的你</h2>
+                  <br/>
+                   <%= image_tag("feature.png") %><br/><br/>
+                  <p class="index-contect">
+                    联盟web2017创立，是一家新兴的互联网公司，专注于求职招聘领域。<br />
+                  </p>
+                  <p>在这个快速发展的时代，还在担心自己的才能无处施展吗？来联盟web就对了，在这里你可以找到自己心仪的合作伙伴，让我们进行一次美好的邂逅吧，联盟web等你！</p>
+
+              </div>
+          </div>
+
+        </div>
+    </div>
+</section>
+<!--======== end Feature =========-->
+
+
+<!--======== Services =========-->
+  <section id="service" class="what-we-do">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6 col-md-offset-3 text-center">
+                  <h2 class="section-title">选择联盟web的理由</h2><br/>
+                  </br>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-md-10 col-md-offset-1">
+                  <div class="row">
+                      <div class="col-md-4 col-sm-4 col-xs-12">
+                          <div class="do-box">
+                              <%= image_tag("1.png") %>
+                              <h3>知名企业</h3>
+                              <p>联盟web提供优质的互联网企业资源，在这里你可以找到自己心仪的企业，并与他们勾搭。<p>
+                          </div>
+                      </div>
+                      <div class="col-md-4 col-sm-4 col-xs-12">
+                          <div class="do-box">
+                              <%= image_tag("2.png") %>
+                              <h3>精准匹配</h3>
+                              <p>我们根据用户的简历、订阅等属性，快速匹配同类型的职位。</p>
+                          </div>
+                      </div>
+                      <div class="col-md-4 col-sm-4 col-xs-12">
+                          <div class="do-box">
+                              <%= image_tag("3.png") %>
+                              <h3>界面清爽</h3>
+                              <p>干净清爽的界面总是能够带给用户舒服的体验，我们聘请一流的网站设计师来设计产品，绝对带给你不一样的体验。</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </section>
+  <!--======== end Services =========-->
