add search fuction

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -7,6 +7,13 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+                <div class="form-group form-inline search-bar">
+                    <%= render :partial => "jobs/search_bar" %>
+                </div>
+            </li>
+          </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
 
