--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,212 +19,306 @@
 @import "bootstrap";
 @import "font-awesome";
 
-/* intro */
+@import url(http://fonts.googleapis.com/css?family=Lato);
+
+/*------------------------------------------------------------------
+                        BOOTSTRAP STYLES
+-------------------------------------------------------------------*/
+.nav > li > a:hover, .nav > li > a:focus{
+  background-color:#9b59b6; /* 点击文字时的底色*/
+  outline:none;
+}
+
+.nav > li > a{
+  color: #ffffff;
+
+}
+.navbar{
+  margin-bottom:0;
+}
+
+.navbar-brand{
+   color: #ffffff;
+   font-weight: 700px;  
+}
+
+.navbar button{
+  background:#ccc;
+}
+
+.navbar span{
+  background:#ededed;
+}
+
+.navbar a{
+  text-align:center;
+}
+
+/*------------------------------------------------------------------
+                        DEFAULT STYLES
+-------------------------------------------------------------------*/
+body{
+  font-family: 'Lato', sans-serif;
+  background:#fff;
+  overflow-x: hidden;
+}
+
 section{
-    padding-top: 50px;
-    padding-bottom: 50px;
+  margin:100px 0;
 }
 
-
-.btn.btn-primary-welcome{
-    background-color:  #3498db;
-    color: #fff;
-    border-color: #fff;
-    padding: 10px 20px;
-    margin: 30px;
-    font-size: 20px;
-    letter-spacing: 1px;
+hr{
+  margin:10px 0;
 }
 
-.intro{
-    height: 650px;
-  background: image_url("intro.jpg") no-repeat scroll top center/ cover;
-    margin-left: -15px;
-    margin-right: -15px;
-
+h3,h4{
+  text-align:center;
+  font-weight:bold;
 }
 
-.intro-content > h1 {
-    color: #FAFAFA;
-    font-size: 40px;
-    font-weight: 700;
-    letter-spacing: 2px;
-    margin-top: 10px;
-    margin-bottom: 60px;
-    text-transform: capitalize;
-    word-spacing: 6px;
+section h2{
+  text-align:left;
+  position:relative;
+  margin-bottom:40px;
 }
 
-
-/* intro end */
-
-/* our experts*/
-.our-experts{
-    background-color: #F2F2F2;
-    margin-left: -15px;
-    margin-right: -15px;
-
-    p{
-      letter-spacing: 1px;
-    }
-    a{
-      text-decoration:none;
-      color: #002E2E;
-    }
-
-    img{
-      width: 55px;
-    }
-}
-/* our experts */
-
-
-.short-line {
-    display: block;
-    background: #35CCC6;
-    border-style: none;
-    border-radius: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: -10px;
-    margin-bottom: 30px;
-    z-index: 53;
-    width: 100px;
-    height: 1.5px;
-    position: relative;
+section h2:after{
+	margin-top:20px;
+  display:inline-block;
+  content:'';
+  width:45px;
+  height:10px;
+  border-top:5px solid #B5C3D5;
+  position:absolute;
+  bottom:-10px;
+  left:0;
 }
 
-/* what we do */
-.what-we-do{
-    text-align: center;
-
-    img{
-      margin-top: 35px;
-      margin-bottom: -35px;
-      width: 100px;
-    }
+a, a:hover{
+  color:black;
 }
 
-.what-we-do .do-box{
-    border: 1px solid transparent;
+a:hover{
+   transition:background-color,color .3s ease-in-out;
 }
 
-.do-box h3{
-    margin-top: 60px;
-    margin-bottom: 20px;
-    font-size: 18px;
-    letter-spacing: 1px;
-}
-
-.do-box p {
-    color: #666;
-    letter-spacing: 1px;
-    line-height: 22px;
-    margin: 40px 25px 40px 25px;
-}
-
-/* nanbar */
-.navbar-default {
-    background-color:  #2980b9; //背景颜色
-
-    border-color: #2980b9; //边框颜色
-
-    margin-bottom: 0; //底部 margin 不撑开距离
-}
-
-@media (min-width: 768px) {
-   .navbar {
-     border-radius: 0; //圆角为0
-   }
-}
-
-
-.navbar-default .navbar-brand {
-   color: #FAFAFA; //字体颜色
-
-   padding: 10px 15px; //上下10px，左右15px
-   line-height: 30px; //文字行高
-   font-size: 150%;
- }
-
- .navbar-default .navbar-brand:hover,
- .navbar-default .navbar-brand:focus {
-   color: #FAFAFA; //鼠标放置在链接上的文字颜色
-
-   background-color: transparent; //鼠标放置在链接上的背景颜色，这里设为透明
-}
-
-.navbar-default .navbar-nav > li > a{
- color: #FAFAFA;
- font-size: 110%;
- font-weight: 150%;
+/*------------------------------------------------------------------
+                        HEADER STYLES
+-------------------------------------------------------------------*/
+header{
+  background:#673AB7;
 
 }
 
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
- color: #D3D3D3;
-
- background-color: transparent;
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
- color: #FAFAFA;
-
- background-color: transparent;
-
+.banner{
+  background:#B5C3D5;
+  height:280px;
 }
 
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:focus,
-.navbar-default .navbar-nav > .open > a:hover {
- background-color: transparent;
-
- color: #D3D3D3;
-
+.banner>h2,
+.banner .info{
+  height:50px;
+  line-height:50px;
+  position:relative;
+  top:115px;
+  margin:0 auto;
+  text-align:center;
+  width:50%;
 }
 
- .navbar-brand > img {
-   display: inline-block; //图片和链接文字显示在同一行
-   margin-right: 1px; //图片和链接文字拉开一点距离
-   width: 40px; //定制图片宽度
-   height: 40px; //定制图片高度
+.banner>h2{
+  font-size:2.5em;
+  color:#25271E;
 }
 
-/*- navbar end-*/
-
-.container-fluid .jumbotron{
-   padding-bottom: 120px;//内部的底部边距，这样按钮不会很靠近底部了
-   margin: 0 -15px 20px;//顶部margin为0，因此可以直接接着导航栏；左右margin为负15，因此可以顶到浏览器的边缘（抵消 container-fluid 的 15px 左右padding);底部margin为20，会跟下面的内容撑开距离
-   border-radius: 0;//圆角为0
+.banner .info{
+  display:none;
 }
 
-.btn-danger {
-   color: #fff;//字体颜色
-
-   background-color: #E9977A;//背景颜色
-
-   border-color: #EF6C00;//边框颜色
-
+.banner a{
+	height:50px;
+  font-size:1.3em;
+  display:inline-block;
+  width:48%;
+  text-decoration:none;
+  border:2px solid rgba(0,0,0,.3);
+  margin-right:-4px;
+  transition:all .3s ease-in-out;
 }
 
-.btn-danger:hover {
-   background-color: #E65100;//鼠标放置在btn上的背景颜色
-
-   border-color: #E65100;//鼠标放置在btn上的边框颜色
-
-   }
-
-.btn-lg, .btn-group-lg > .btn {
-    padding: 8px 16px;//通过padding来决定btn的大小
-    font-size: 20px;//btn文字大小
-    letter-spacing: 3px;//调整文字间距
-    border-radius: 3px;//btn圆角
-    width: 200px;//这里用指定宽度把btn拉得更长
+.banner a:last-child{
+ 	margin-left:2%;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+.banner a:hover{
+  background:#8FC6FF;
+}
+
+/*------------------------------------------------------------------
+                        SECTION.CLIENTS STYLES
+-------------------------------------------------------------------*/
+
+.clients .clients-info{
+  padding:7px;
+  box-shadow:1px 1px 3px gray, -1px -1px 3px gray;;
+  margin-bottom:20px;
+  width:0;
+  height:0;
+  line-height:0;
+  opacity:0;
+  margin:15px auto 10px;
+  background:#ededed;
+}
+
+.clients .clients-info h3{
+  margin:0;
+  line-height:180px;
+}
+
+/*------------------------------------------------------------------
+                        SECTION.PROCESS STYLES
+-------------------------------------------------------------------*/
+.process .method{
+  background:#ccc;
+  text-align:center;
+  padding:10px;
+  margin-bottom:30px;
+  border-radius:5px;
+  opacity:0;
+}
+
+.process .method h3{
+  font-style:italic;
+}
+
+.process .method p{
+  margin:0;
+}
+
+.process .method h4{
+  background:#8FC6FF;
+  width:60px;
+  height:60px;
+  font-size:2em;
+  font-weight:bold;
+  border-radius:50%;
+  line-height:60px;
+  margin:0 auto;
+  position:relative;
+  top:30px;
+}
+
+/*------------------------------------------------------------------
+                        SECTION.BLOGS STYLES
+-------------------------------------------------------------------*/
+.blogs{
+  margin-bottom:0;
+}
+
+.blogs p{
+  position: relative;
+  opacity: 0;
+  left:-750px;
+}
+
+.blogs button{
+	position:relative;
+  bottom:-50px;
+  opacity:0;
+  margin-bottom:20px;
+}
+
+.col-lg-4{
+  position: relative;
+}
+
+.blogs img{
+	position:absolute;
+  right:-330px;
+	margin-top:10px;
+  opacity:0;
+}
+
+.firstAnimation {
+  opacity: 1;
+  height: 180px;
+  width: 250px;
+}
+
+/*------------------------------------------------------------------
+                        FOOTER STYLES
+-------------------------------------------------------------------*/
+.footer{
+  text-align:center;
+  height:80px;
+  background-color:#673AB7;
+  color: #bdc3c7;
+  padding: 20px;
+  z-index: 1000;
+}
+
+/*------------------------------------------------------------------
+                        MEDIA QUERIES STYLES
+-------------------------------------------------------------------*/
+@media only screen and (max-width: 1050px) and (min-width:600px){
+  .banner>h2, .banner .info{
+    width:70%
+  }
+  .banner>h2{
+    font-size:1.8em;
+  }
+}
+
+@media only screen and (max-width: 599px) and (min-width:350px){
+  .banner a{
+    font-size:1em;
+  }
+  .banner>h2, .banner .info{
+    width:80%
+  }
+  .banner>h2{
+    font-size:1.2em;
+  }
+}
+
+@media only screen and (max-width: 349px){
+	.banner .info{
+		height:auto;
+  }
+  .banner a{
+    font-size:1em;
+    width:50%;
+    display:block;
+  }
+  .banner a:first-child{
+    margin:0 auto;
+  }
+  .banner a:last-child{
+    margin:10px auto 0;
+  }
+	.banner>h2, .banner .info{
+    width:80%
+  }
+  .banner>h2{
+    font-size:1em;
+  }
+}
+
+@media only screen and (max-width: 768px) and (min-width:550px){
+  .process .row:first-child .col-xs-12,
+  .clients .row:first-child .col-xs-12{
+      width:100%;
+ 	}
+  .process .col-xs-12,
+  .clients .col-xs-12{
+    	width:50%;
+  }
+  .clients .col-xs-12:nth-child(3),
+  .clients .col-xs-12:nth-child(4){
+    margin-top:15px;
+  }
+}
+
 
 /****** LOGIN MODAL ******/
 .loginmodal-container {
@@ -323,49 +417,10 @@ section{
 
 
 
-/* footer */
 
-html,body {
-  margin: 0;
-  padding:0;
-  height: 100%;
-  clear:both;
-}
-.container-full {
-  min-height:100%;
-  height: auto;
-  height: 100%; /*IE6不识别min-height*/
-  position: relative;
 
-}
 
-footer {
-    font-family: Verdana, Geneva, sans-serif;
-    background-color: #EEEEEE;
-    text-align: center;
-    color: #7e7e7e;
-    margin-top: 10px;
-    margin-left: -15px;
-    margin-right: 0px;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    z-index: 1000;  /* 确保页面滑动的时候，字体不会从上面滑下去 */
-}
-
-.container {
-  text-align: center;
-}
-
-.sec-services {
-  background-color: #DCDCDC;
-  margin-top: -20px;
-  margin-left: -20px;
-  margin-right: -15px;
-}
-
+/*------------------------  搜索框样式 --------------------*/
 .form-group {
     margin-bottom: 10px;
     margin-top: 10px;
@@ -377,3 +432,4 @@ footer {
     border-collapse: separate;
     width: 250px; //加上width
 }
+/*----------------------------end ------------------------*/
