--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,75 +1,166 @@
-  <section class="intro">
+<div class="banner">
+  <h2>We help you achieve your goals</h2>
+  <div class="info">
+    <a href="#process" title="">See our process</a>
+    <a href="#clients" title="">See our clients</a>
+  </div>
+</div>
+<section class="about" id="about">
+ <div class="container">
+   <div class="row">
+     <div class="col-xs-12">
+       <h2>About us</h2>
+      </div>
+     </div>
+   <div class="row">
+     <div class="col-xs-12 col-sm-4">
+       <h4>Our history</h4>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+     </div>
+     <div class="col-xs-12 col-sm-4">
+       <h4>Our vision</h4>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+     </div>
+     <div class="col-xs-12 col-sm-4">
+       <h4>Our values</h4>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+     </div>
+   </div>
+ </div>
+</section> <!-- end of about section-->
+<hr>
+<section class="clients" id="clients">
+  <div class="container">
+   <div class="row">
+     <div class="col-xs-12">
+       <h2>Our Clients</h2>
+      </div>
+    </div>
     <div class="row">
-      <div class="col-md-12 text-center">
-        <div class="intro-content">
-          <h1 >联盟招聘网，期待优秀的你来加入</h1>
-
-          <a class="btn btn-primary-welcome" href="/jobs" role="button">加入我们</a>
-        </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+       <div class="clients-info">
+         <h3>Client1</h3>
+       </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+       <div class="clients-info">
+         <h3>Client2</h3>
+       </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+       <div class="clients-info">
+         <h3>Client3</h3>
+       </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+       <div class="clients-info">
+         <h3>Client4</h3>
+       </div>
       </div>
     </div>
-</section>
-
-
-<!--======== Feature =========-->
-<section id="feature" class="our-experts">
-    <div class="container">
-        <div class="row">
-          <div class="row">
-              <div class="col-md-6 col-md-offset-3 text-center">
-                  <h2 class="section-title">最好的时代，遇见最好的你</h2>
-                  <br/>
-                   <%= image_tag("feature.png") %><br/><br/>
-                  <p class="index-contect">
-                    联盟web2017创立，是一家新兴的互联网公司，专注于求职招聘领域。<br />
-                  </p>
-                  <p>在这个快速发展的时代，还在担心自己的才能无处施展吗？来联盟web就对了，在这里你可以找到自己心仪的合作伙伴，让我们进行一次美好的邂逅吧，联盟web等你！</p>
-
-              </div>
-          </div>
-
-        </div>
+  </div>
+</section> <!-- end of clients section-->
+<hr>
+<section class="process" id="process">
+ <div class="container">
+   <div class="row">
+     <div class="col-xs-12">
+       <h2>Our Process</h2>
+     </div>
+   </div>
+   <div class="row">
+     <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="method">
+         <h3>Analyze</h3>
+         <hr>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+         <h4>1</h4>
+       </div>
+     </div>
+     <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="method">
+         <h3>Develop</h3>
+         <hr>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+         <h4>2</h4>
+       </div>
+     </div>
+     <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="method">
+         <h3>Test</h3>
+         <hr>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+         <h4>3</h4>
+       </div>
+     </div>
+     <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="method">
+         <h3>Deploy</h3>
+         <hr>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+         <h4>4</h4>
+       </div>
+     </div>
+   </div>
+ </div>
+</section> <!-- end of method section-->
+<hr>
+<section class="testimonials" id="testimonials">
+  <div class="container">
+    <div class="row">
+     <div class="col-xs-12">
+       <h2>Our Testimonials</h2>
+     </div>
     </div>
-</section>
-<!--======== end Feature =========-->
-
-
-<!--======== Services =========-->
-  <section id="service" class="what-we-do">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-6 col-md-offset-3 text-center">
-                  <h2 class="section-title">选择联盟web的理由</h2><br/>
-                  </br>
-              </div>
-          </div>
-          <div class="row">
-              <div class="col-md-10 col-md-offset-1">
-                  <div class="row">
-                      <div class="col-md-4 col-sm-4 col-xs-12">
-                          <div class="do-box">
-                              <%= image_tag("1.png") %>
-                              <h3>知名企业</h3>
-                              <p>联盟web提供优质的互联网企业资源，在这里你可以找到自己心仪的企业，并与他们勾搭。<p>
-                          </div>
-                      </div>
-                      <div class="col-md-4 col-sm-4 col-xs-12">
-                          <div class="do-box">
-                              <%= image_tag("2.png") %>
-                              <h3>精准匹配</h3>
-                              <p>我们根据用户的简历、订阅等属性，快速匹配同类型的职位。</p>
-                          </div>
-                      </div>
-                      <div class="col-md-4 col-sm-4 col-xs-12">
-                          <div class="do-box">
-                              <%= image_tag("3.png") %>
-                              <h3>界面清爽</h3>
-                              <p>干净清爽的界面总是能够带给用户舒服的体验，我们聘请一流的网站设计师来设计产品，绝对带给你不一样的体验。</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
+    <div class="row">
+     <div class="col-xs-12 col-sm-4">
+       <blockquote>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
+         </p>
+      </blockquote>
+     </div>
+     <div class="col-xs-12 col-sm-4">
+       <blockquote>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
+         </p>
+       </blockquote>
+     </div>
+     <div class="col-xs-12 col-sm-4">
+       <blockquote>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
+         </p>
+       </blockquote>
+     </div>
+    </div>
+  </div>
+</section><!-- end of testimonials section-->
+<hr>
+<section class="blogs" id="blogs">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+       <h2>Latest Blogs</h2>
       </div>
-  </section>
-  <!--======== end Services =========-->
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-lg-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar scelerisque aliquet. Aliquam eu ultrices nisl. Mauris sit amet odio tincidunt, congue magna a, malesuada odio. Maecenas egestas metus leo, nec vulputate odio pulvinar sodales. Aenean a nunc nisi. Donec eleifend sodales mauris, ut egestas tellus ultrices nec. Integer in nisl vitae libero lobortis egestas. Proin nisi lacus, iaculis sit amet nibh vel, fringilla pellentesque est.</p>
+        <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut delectus ratione aut est, minus eius, dolorem blanditiis culpa ad iusto, accusamus iure alias nihil voluptatem soluta esse velit laudantium eum.</p>
+        <p class="visible-lg">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+        <button type="button" class="btn btn-primary">Learn more</button>
+      </div>
+      <div class="visible-lg col-lg-4">
+        <img class="img-responsive" src="http://placehold.it/450x300" />
+      </div>
+    </div>
+  </div>
+</section><!-- end of blogs section-->
