--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,9 +1,6 @@
 <div class="banner">
   <h2>We help you achieve your goals</h2>
-  <div class="info">
-    <a href="#process" title="">See our process</a>
-    <a href="#clients" title="">See our clients</a>
-  </div>
+  
 </div>
 <section class="about" id="about">
  <div class="container">
@@ -15,10 +12,11 @@
    <div class="row">
      <div class="col-xs-12 col-sm-4">
        <h4>Our history</h4>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <%= image_tag("feature.png") %><br/><br/>
+              <p class="index-contect">
+                联盟web2017创立，是一家新兴的互联网公司，专注于求职招聘领域。<br />
+              </p>
+              <p>在这个快速发展的时代，还在担心自己的才能无处施展吗？来联盟web就对了，在这里你可以找到自己心仪的合作伙伴，让我们进行一次美好的邂逅吧，联盟web等你！</p>
      </div>
      <div class="col-xs-12 col-sm-4">
        <h4>Our vision</h4>
@@ -48,7 +46,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
        <div class="clients-info">
-         <h3>Client1</h3>
+         <h3>hello</h3>
        </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
@@ -69,7 +67,7 @@
     </div>
   </div>
 </section> <!-- end of clients section-->
-<hr>
+
 <section class="process" id="process">
  <div class="container">
    <div class="row">
@@ -83,7 +81,7 @@
          <h3>Analyze</h3>
          <hr>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-         <h4>1</h4>
+        <h4>1</h4>
        </div>
      </div>
      <div class="col-xs-12 col-sm-6 col-md-3">
